--- a/MeetUps_FrontEnd/app/src/main/res/values/themes.xml
+++ b/MeetUps_FrontEnd/app/src/main/res/values/themes.xml
@@ -1,6 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Theme.MeetUps" parent="Theme.AppCompat.DayNight.NoActionBar">
+            <item name="buttonStyle">@style/myButton</item>
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -12,5 +13,11 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+
+    </style>
+
+    <!-- Pour enelever les mayu du bouton -->
+    <style name="myButton" parent="Widget.AppCompat.Button">
+        <item name="android:textAllCaps">false</item>
     </style>
 </resources>
